# metaevolv

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
algorithms/: abc.py  clonalg.py  de.py  ga.py  ga2.py  pso.py
examples_notebooks/: how_to_use.ipynb
metaevolv/: __init__.py  abc.py  clonalg.py  de.py  ga.py  pso.py
